--- a/includes/css/page-template.css
+++ b/includes/css/page-template.css
@@ -55,14 +55,14 @@ body {
   display: flex;
   justify-content: center;
   width: 100vw;
-  height: 65vh;
+  max-height: 65vh;
   font-family: 'Source Sans Pro', sans-serif; 
   line-height: 2; 
   font-size: 24px; 
   padding-left: 9vh; 
   padding-right: 9vh;
   padding-top: 12vh;
-  margin-bottom: 12vh;
+  margin-bottom: 14vh;
   /* margin-bottom: 70px; */
   overflow: scroll;
   /* padding-right: 60px; */
